Use Arrays.asList for now